--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Debate Hub Pro - Structured Online Debates</title>
-    <meta name="description" content="Engage in structured debates and expand your perspective with Debate Hub Pro - the premier platform for thoughtful discussion." />
+    <meta
+      name="description"
+      content="Engage in structured debates and expand your perspective with Debate Hub Pro - the premier platform for thoughtful discussion."
+    />
     <meta name="author" content="Debate Hub Pro" />
 
     <meta property="og:title" content="Debate Hub Pro - Structured Online Debates" />
-    <meta property="og:description" content="Engage in structured debates and expand your perspective with Debate Hub Pro - the premier platform for thoughtful discussion." />
+    <meta
+      property="og:description"
+      content="Engage in structured debates and expand your perspective with Debate Hub Pro - the premier platform for thoughtful discussion."
+    />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
